--- a/src/globals.css
+++ b/src/globals.css
@@ -188,7 +188,7 @@
 
   /* Bottom bar */
   .bottom-bar {
-    @apply z-50 flex-between w-full sticky bottom-0 rounded-t-[20px] bg-dark-2 px-5 py-4 md:hidden;
+    @apply z-50 flex-between w-full sticky bottom-0 rounded-t-[20px] bg-dark-2 px-5 py-4 lg:hidden;
   }
 
   /* File uploader */
@@ -219,7 +219,7 @@
 
   /* Left sidebar */
   .leftsidebar {
-    @apply hidden md:flex px-6 py-10 flex-col justify-between min-w-[220px] md:w-[220px] xl:w-[270px] bg-dark-2 border-r border-dark-4;
+    @apply hidden lg:flex px-6 py-10 flex-col justify-between min-w-[220px] md:w-[220px] xl:w-[270px] bg-dark-2 border-r border-dark-4;
   }
 
   .leftsidebar-link {
